# parkchunghwa-data

./: #15_독립코드여부_검증_v1.md  #15_합성구조_추적_v1.md  3영역_최종FACT_정리_v1.md  40종_최종종결보고서_v1.md  76종_생존상태_재분류_v1.md  ABSORBED_탈락사유_v1.md  A영역_R3_검증_최종집계_v1.md  A영역_R3후_2문진_확정검증_001_v1.md  A영역_복수후보_원인분석_001_v1.md  B1B2_분선언_호출표_v1.md  BV37_배우자사회구조_원문수집.txt  BV40_COMPOUND01_FINAL.md  BV40_EXPANDED_BUN_v1.md  BV40_LIVE01_REVIEW.md  BV40_LIVE03.md  BV40_MAIN_BUN_FINAL.md  BV40_MAIN_BUN_REWRITE.md  BV40_PHILOSOPHY_LOCK.md  BV40_PHILOSOPHY_v1.md  BV40_REWRITE04_FINAL.md  BV40_REWRITE04_FINAL_B.md  BV40_REWRITE04_LIVE01.md  BV40_rewrite_01.md  BV40_배우자분_문서색인_v1.md  BV40_진로_J01_v1.md  BV40_진로_J02_v1.md  BV40_진로_J03_v1.md  BV40_진로_J05_v1.md  BV40_진로_J06_v1.md  BV40_진로_J07_v1.md  BV40_진로_J10_v1.md  BV40_진로_J11_v1.md  BV_Phase2_실측계획_v1.md  BV_고객반응_재분류_v1.md  BV_베타_실측_기록_v1.md  BV_베타테스트_정의_v1.md  BV_실측_001_LIVE03_v1.md  C21-C32_검토_채택표_v1.md  C24_C27_근거추적_BV37_v1.md  COMPOUND02_EXPANDED.md  (+347 more)
.master_engine/: certification_policy.json  certified_plugins.json  registry_audit.json
_백업/P4_v1_2026-06-09/: P4_중간보고서_v1.md  실고객_로그_누적_v1.md  실고객_로그_양식_v1.md
_백업/배우자분_원형탐사_2026-06-18/: _배우자분_B급_검증_summary.json  배우자분_B급_원형검증_v1.md
cli/: certification.py  master.py
core/: __init__.py
core/application/: __init__.py  analysis_pipeline.py  capability_catalog.py  command_bus.py  commands.py  handlers.py  provider_enrichment.py  queries.py  query_bus.py  report_builder.py  result.py  use_cases.py
sdk/: __init__.py  manifest.py  module.py  plugin.py  templates.py  validation.py  version.py
(+338 files in other folders)
